# TestCMakeCrossCompile

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp
cmake/: CrossCompile.cmake
command/: Rebuild.sh
